--- a/lib/locale/app_en.arb
+++ b/lib/locale/app_en.arb
@@ -5,5 +5,6 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "login": "Login",
-    "password": "Password"
+    "password": "Password",
+    "more": "More"
 }
