--- a/lib/locale/app_ru.arb
+++ b/lib/locale/app_ru.arb
@@ -5,5 +5,6 @@
     "signIn": "Вход",
     "signOut": "Выход",
     "login": "Логин",
-    "password": "Пароль"
+    "password": "Пароль",
+    "more": "Больше"
 }
