Add more features

--- a/lib/locale/app_ru.arb
+++ b/lib/locale/app_ru.arb
@@ -6,5 +6,13 @@
     "signOut": "Выход",
     "login": "Логин",
     "password": "Пароль",
-    "more": "Больше"
+    "more": "Больше",
+    "myMusic": "Моя музыка",
+    "playlists": "Плейлисты",
+    "subscriptions": "Подписки",
+    "vkRecommendation": "ВК рекомендуемое",
+    "vkPopular": "ВК популярное",
+    "searchResult": "Результаты поиска",
+    "vk": "ВК",
+    "yt": "Youtube"
 }
