--- a/lib/locale/app_en.arb
+++ b/lib/locale/app_en.arb
@@ -6,5 +6,13 @@
     "signOut": "Sign out",
     "login": "Login",
     "password": "Password",
-    "more": "More"
+    "more": "More",
+    "myMusic": "My music",
+    "playlists": "Playlists",
+    "subscriptions": "Subscriptions",
+    "vkRecommendation": "VK recommendations",
+    "vkPopular": "VK popular",
+    "searchResult": "Search result",
+    "vk": "VK",
+    "yt": "Youtube"
 }
