Add more-more features

--- a/lib/locale/app_en.arb
+++ b/lib/locale/app_en.arb
@@ -9,10 +9,24 @@
     "more": "More",
     "myMusic": "My music",
     "playlists": "Playlists",
+    "playlist": "Playlist",
     "subscriptions": "Subscriptions",
     "vkRecommendation": "VK recommendations",
     "vkPopular": "VK popular",
     "searchResult": "Search result",
     "vk": "VK",
-    "yt": "Youtube"
+    "yt": "Youtube",
+    "play": "Play",
+    "headQueue": "Add to start of queue",
+    "tailQueue": "Add to end of queue",
+    "addToPlaylist": "Add to playlist",
+    "share": "Share",
+    "searchRelated": "Search related",
+    "relatedTracks": "Related",
+    "addToMyMusic": "Add to my music",
+    "removeFromMyMusic": "Remove from my music",
+    "like": "Like",
+    "dislike": "Dislike",
+    "searchInvite": "Enter your query for search",
+    "queue": "Queue"
 }
