--- a/lib/locale/app_ru.arb
+++ b/lib/locale/app_ru.arb
@@ -9,10 +9,24 @@
     "more": "Больше",
     "myMusic": "Моя музыка",
     "playlists": "Плейлисты",
+    "playlist": "Плейлист",
     "subscriptions": "Подписки",
     "vkRecommendation": "ВК рекомендуемое",
     "vkPopular": "ВК популярное",
     "searchResult": "Результаты поиска",
     "vk": "ВК",
-    "yt": "Youtube"
+    "yt": "Youtube",
+    "play": "Играть",
+    "headQueue": "Добавить в начало очереди",
+    "tailQueue": "Добавить в конец очереди",
+    "addToPlaylist": "Добавить в плейлист",
+    "share": "Поделиться",
+    "searchRelated": "Искать похожие",
+    "relatedTracks": "Похожие",
+    "addToMyMusic": "Добавить в мою музыку",
+    "removeFromMyMusic": "Удалить из моей музыки",
+    "like": "Нравится",
+    "dislike": "Не нравится",
+    "searchInvite": "Введите Ваш запрос для поиска",
+    "queue": "Очередь"
 }
