Another commit with more features

--- a/lib/locale/app_en.arb
+++ b/lib/locale/app_en.arb
@@ -1,4 +1,13 @@
 {
+    "ok": "OK",
+    "cancel": "Cancel",
+    "yes": "Yes",
+    "no": "No",
+    "close": "Close",
+    "title": "Title",
+    "apply": "Apply",
+    "settings": "Settings",
+    "services": "Services",
     "home": "Home",
     "search": "Search",
     "mediaLib": "Media library",
@@ -28,5 +37,27 @@
     "like": "Like",
     "dislike": "Dislike",
     "searchInvite": "Enter your query for search",
-    "queue": "Queue"
+    "queue": "Queue",
+    "createPlaylist": "Create playlist",
+    "vkPlaylist": "VK playlist",
+    "ytPlaylist": "Youtube playlist",
+    "newPlaylist": "New playlist",
+    "privacySetting": "Privacy setting",
+    "privatePrivacy": "Private",
+    "linkPrivacy": "Link access",
+    "publicPrivacy": "Public",
+    "addToCurrent": "Add to current playlist",
+    "removePlaylist": "Remove playlist",
+    "follow": "Follow",
+    "filters": "Filters",
+    "vkFriends": "VK friends",
+    "vkGroups": "VK groups",
+    "emptyFilterPlaylists": "Change filter for looking your playlists",
+    "emptyFilterSubscriptions": "Change filter for looking your subscriptions",
+    "emptyFiltersSearch": "Change filter for looking search result",
+    "removePlaylistQuestion": "You are sure for deleting playlist?",
+    "editPlaylist": "Edit playlist",
+    "removeFromPlaylist": "Remove from playlist",
+    "changeOrder": "Change order",
+    "selectTracks": "Select..."
 }
