--- a/lib/locale/app_ru.arb
+++ b/lib/locale/app_ru.arb
@@ -1,4 +1,13 @@
 {
+    "ok": "Ок",
+    "cancel": "Отмена",
+    "yes": "Да",
+    "no": "Нет",
+    "close": "Закрыть",
+    "title": "Название",
+    "apply": "Применить",
+    "settings": "Настройки",
+    "services": "Сервисы",
     "home": "Главная",
     "search": "Поиск",
     "mediaLib": "Медиатека",
@@ -28,5 +37,27 @@
     "like": "Нравится",
     "dislike": "Не нравится",
     "searchInvite": "Введите Ваш запрос для поиска",
-    "queue": "Очередь"
+    "queue": "Очередь",
+    "createPlaylist": "Создать плейлист",
+    "vkPlaylist": "ВК-плейлист",
+    "ytPlaylist": "Youtube-плейлист",
+    "newPlaylist": "Новый плейлист",
+    "privacySetting": "Настройка приватности",
+    "privatePrivacy": "Частный",
+    "linkPrivacy": "Доступ по ссылке",
+    "publicPrivacy": "Публичный",
+    "addToCurrent": "Добавить к текущему плейлисту",
+    "removePlaylist": "Удалить плейлист",
+    "follow": "Следить",
+    "filters": "Фильтры",
+    "vkFriends": "ВК-друзья",
+    "vkGroups": "ВК-группы",
+    "emptyFilterPlaylists": "Измените фильтры, чтобы увидеть свои плейлисты",
+    "emptyFilterSubscriptions": "Измените фильтры, чтобы увидеть свои подписки",
+    "emptyFiltersSearch": "Измените фильтры, чтобы увидеть результаты поиска",
+    "removePlaylistQuestion": "Вы уверены, что желаете удалить плейлист?",
+    "editPlaylist": "Редактировать плейлист",
+    "removeFromPlaylist": "Удалить из плейлиста",
+    "changeOrder": "Изменить порядок",
+    "selectTracks": "Выбрать..."
 }
